2003-05-27  Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * gdcmPython/gdcm.i:
        - typemaps correction to take into account the systematic replacement
          of "using namespace std" with std:: prefix e.g. std::list,
          std::string... (cf changes of 2003-05-21).
        - gdcmGlob global variable of type gdcmGlobal (defined in
          src/gdcmUtil.cxx and declared in gdcmPython/gdcm.i) is now
          exported to Python a as cvar.
      * gdcmPython/__init__.py now defines two functions GetPubDictTagNames()
        and GetPubDictTagNamesByCategory() as a replacement for deprecated
        gdcmDictSet.GetPubDictTagNames() and
        gdcmDictSet.GetPubDictTagNamesByCategory() class functions (i.e.
        C++ static methods).
      * gdcmPython/demo/printGroupedPublicDict.py is operational again,
        with the above changes.

2003-05-22  Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
      * setup.py, manifest.in : bug fix under linux

2003-05-22  Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
      * Modification of setup.py to compile vtk part too. Then, we have 2
        wrappers which must work with same distutils. For that, we have a
        generic distutils in distusiltsWrapping.py ; with :
         - build_extWrap class to wrap generically all extensions,
         - ExtensionWrap base class for all wrapping extension that contains
           a wrapper
         - Wrapper interface which wrap sources
        + In WrapSwig.py  we have extension and wrapper for Swig
        + In WrapVTK.py  we have extension and wrapper for VTK
      * MANIFEST.in : modifications to consider vtk directory and new python
        files for compilation

2003-05-21  Eric Boix <Eric.Boix@creatis.insa-lyon.fr> with Benoit Regrain
      * Added python wrappers of vtkGdcmReader vtk class (see the
        source in vtk/vtkGdcmReader.cxx) :
        - vtk/Makefile.am now builds a library